---------------------------------------------------------------------------------------------------
Version: 4.2.7
Date: ????
  Bugfixes:
    - More icon fixes
    - Fixed some angels smelting recipes outputting iron plates instead of omnium due to a typo
---------------------------------------------------------------------------------------------------
Version: 4.2.6
Date: 2026-01-03
  Changes:
    - Updated compat for Angelsmods
    - Updated compat for Krastorio 2
    - Moved bob quartz ore omnitraction to tier 1 and added initial recipe
---------------------------------------------------------------------------------------------------
Version: 4.2.5
Date: 2026-01-02
  Changes:
    - Updated compat for bobsmods
  Bugfixes:
    - Fixed small icons of dynamic extraction recipes / technologies having a wrong scale  and
      shift with certain mods
---------------------------------------------------------------------------------------------------
Version: 4.2.4
Date: 2024.12.16
  Bugfixes:
    - Fixed that the pumpjack was not unlockable with space age
---------------------------------------------------------------------------------------------------
Version: 4.2.3
Date: 2024.11.26
  Changes:
    - Changed the default crafting category of crude oil / omnic acid to omnitractors
---------------------------------------------------------------------------------------------------
Version: 4.2.2
Date: 2024.11.23
  Changes:
    - Updated graphics definition for omnilib 4.2.2
---------------------------------------------------------------------------------------------------
Version: 4.2.1
Date: 2024.11.19
  Bugfixes:
    - Fixed a missing nil check in autoplace removal that caused a crash with Factorissimo 3
---------------------------------------------------------------------------------------------------
Version: 4.2.0
Date: 2024.11.19
  Changes:
    - Updated fopr factorio 2.0