@@ -30,7 +30,7 @@ omnite=Omnite
 crushed-omnite=Crushed Omnite
 pulverized-omnite=Pulverized Omnite
 omnitractor=Electric Omnitractor __1__
-stone-crushed=Crushed Stone
+angels-stone-crushed=Crushed Stone
 pulverized-stone=Pulverized Stone
 omnicium-plate=Omnicium Plate
 omnium-plate=Omnium Plate
